--- a/index.html
+++ b/index.html
@@ -7,5 +7,14 @@
   </head>
   <body>
     <h1>のん</h1>
+    <p>
+      簡単な自己紹介やアピール。<br>
+      どんなことができる、したいのか。
+    </p>
+
+    <h3>Profile</h3>
+    <ul>
+      <li>名前：のん</li>
+    </ul>
   </body>
 </html>
