自己紹介更新

--- a/index.html
+++ b/index.html
@@ -15,6 +15,24 @@
     <h3>Profile</h3>
     <ul>
       <li>名前：のん</li>
+      <li>所在地：東海</li>
+      <li>得意領域：まだ勉強中...</li>
     </ul>
+
+    <h3>skills</h3>
+    <table>
+      <tr>
+        <th>OS</th>
+        <tb>Mac</tb>
+      </tr>
+      <tr>
+        <th>資格・免許</th>
+        <td>英検3級</td>
+      </tr>
+    </table>
+
+    <h3>Works</h3>
+    <p>マイプロBSC　→ STD<br>
+    『「selecturn」制作プロジェクト』実施中</p>
   </body>
 </html>
