間違い修正

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <table>
       <tr>
         <th>OS</th>
-        <tb>Mac</tb>
+        <td>Mac</td>
       </tr>
       <tr>
         <th>資格・免許</th>
@@ -32,7 +32,7 @@
     </table>
 
     <h3>Works</h3>
-    <p>マイプロBSC　→ STD<br>
+    <p>マイプロBSC → STD<br>
     『「selecturn」制作プロジェクト』実施中</p>
   </body>
 </html>
