--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
     <h3>Works</h3>
     <p>マイプロBSC → STD<br>
-    『「selecturn」制作プロジェクト』実施中</p>
+    『「selecturn(仮名)」制作プロジェクト』実施中<br>
+    「その人にあった学習方法で学力向上させることができる未来」を目指して<br>
+    「ほとんどのシステムを利用者が選ぶことができるサイトの開発」をしようとしています。</p>
   </body>
 </html>
