--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
     『「selecturn(仮名)」制作プロジェクト』実施中<br>
     「その人にあった学習方法で学力向上させることができる未来」を目指して<br>
     「ほとんどのシステムを利用者が選ぶことができるサイトの開発」をしようとしています。</p>
+    <p>現在はプログラミング勉強中</p>
   </body>
 </html>
