ポートフォリオに必要な情報を追加

--- a/index.html
+++ b/index.html
@@ -37,5 +37,11 @@
     「その人にあった学習方法で学力向上させることができる未来」を目指して<br>
     「ほとんどのシステムを利用者が選ぶことができるサイトの開発」をしようとしています。</p>
     <p>現在はプログラミング勉強中</p>
+
+    <h3>Contact</h3>
+    <ul>
+      <li><a href="https://twitter.com/oto_non_desu">X(旧Twitter)N/S垢</a></li>
+      <li><a href="https://twitter.com/non_niya_c2">X(旧Twitter)本垢</a></li>
+    </ul>
   </body>
 </html>
