--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>のん</h1>
-    <img src="https://github.com/nonniya/nonniya.github.io/blob/main/%E3%82%B3%E3%83%86%E3%82%AD%E3%83%A3.%E3%83%8F%E3%83%AD%E3%82%A6%E3%82%A3%E3%83%B3.jpeg">
+    <img src="https://github.com/nonniya/nonniya.github.io/blob/main/%E3%82%B3%E3%83%86%E3%82%AD%E3%83%A3.%E3%83%8F%E3%83%AD%E3%82%A6%E3%82%A3%E3%83%B3.jpeg" wight="280" height="280">
     <p>
       簡単な自己紹介やアピール。<br>
       どんなことができる、したいのか。
