--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>のん</h1>
-    <img src="コテキャ.ハロウィン.jpeg">
+    <img src="コテキャ.ハロウィン.jpeg" width="280" height="280">
     <p>
       簡単な自己紹介やアピール。<br>
       どんなことができる、したいのか。
