--- a/index.html
+++ b/index.html
@@ -45,5 +45,8 @@
       <li><a href="https://twitter.com/oto_non_desu">X(旧Twitter)N/S垢</a></li>
       <li><a href="https://twitter.com/non_niya_c2">X(旧Twitter)本垢</a></li>
     </ul>
+
+    <h3>好きな動画</h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/PpzL3gaW4Bg?si=m0b8AYVxgeR6KoCw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </body>
 </html>
